<resources>
    <string name="app_name">Messenger</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">REGISTER</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login">login</string>
    <string name="select_photo">select photo</string>
    <string name="type_message">Type Message</string>
    <string name="send">Send</string>
</resources>
